--- a/Keras_regression_step_B.ipynb
+++ b/Keras_regression_step_B.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPPVXY2b+EWpbmc7rJbw16",
+      "authorship_tag": "ABX9TyMPP3WlrsStwGJZ018D2A4K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j6nRu1kOeZ_c",
-        "outputId": "44dc3f23-e968-4ec6-b232-675aa296ab06"
+        "outputId": "3f46c602-0f09-4e8b-9f88-7c565577313b"
       },
       "outputs": [
         {
@@ -138,88 +138,23 @@
             "2         -0.526262       -2.239829  3.551340  \n",
             "3         -0.526262       -2.239829  5.055221  \n",
             "4          0.070492        0.647569  4.976069  \n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step\n",
-            "Average MSE: 616.2143455656584\n",
+            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step\n",
+            "Average MSE: 621.306258490632\n",
             "Standart MSE: 0.0\n",
             "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 706.6468149360105\n",
-            "Standart MSE: 90.43246937035218\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 32ms/step\n",
-            "Average MSE: 686.775060985509\n",
-            "Standart MSE: 79.0050265558148\n",
+            "Average MSE: 632.4960815248525\n",
+            "Standart MSE: 11.189823034220467\n",
+            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step \n",
+            "Average MSE: 570.0403756378636\n",
+            "Standart MSE: 88.79698843640789\n",
             "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 665.0236076139911\n",
-            "Standart MSE: 78.10712411255264\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 666.775768788328\n",
-            "Standart MSE: 69.9489710062298\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 663.9219171627103\n",
-            "Standart MSE: 64.17245878254305\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 687.9255069097019\n",
-            "Standart MSE: 83.58730616918028\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n",
-            "Average MSE: 709.9066511474012\n",
-            "Standart MSE: 97.44576926440963\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 700.3303523415499\n",
-            "Standart MSE: 95.78228756184801\n",
+            "Average MSE: 604.6160078576177\n",
+            "Standart MSE: 97.46846616582592\n",
             "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step\n",
-            "Average MSE: 695.1861003571632\n",
-            "Standart MSE: 92.16828036712135\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 694.2747849570333\n",
-            "Standart MSE: 87.92624677522706\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step\n",
-            "Average MSE: 700.2617704619009\n",
-            "Standart MSE: 86.49310232095809\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 696.9321100764347\n",
-            "Standart MSE: 83.89654644094136\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 684.6473098963388\n",
-            "Standart MSE: 92.18342195858766\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 707.0797438600622\n",
-            "Standart MSE: 122.37753759538823\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 697.4732543866496\n",
-            "Standart MSE: 124.19547073548227\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 694.3252512443588\n",
-            "Standart MSE: 121.14350714279077\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 676.6100406370836\n",
-            "Standart MSE: 138.54788916707523\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 664.3542488681519\n",
-            "Standart MSE: 144.52995179872\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 662.281312700028\n",
-            "Standart MSE: 141.15985917171537\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 663.944189085114\n",
-            "Standart MSE: 137.95849671512536\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 671.287817527089\n",
-            "Standart MSE: 138.92421496667814\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 661.9872194010793\n",
-            "Standart MSE: 142.70190800256213\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 665.2988887390322\n",
-            "Standart MSE: 140.59724740873645\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n",
-            "Average MSE: 661.4362349718759\n",
-            "Standart MSE: 139.0502240154799\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 662.9444898719619\n",
-            "Standart MSE: 136.55835063292966\n",
-            "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-            "Average MSE: 665.6779718496101\n",
-            "Standart MSE: 134.72854075952736\n",
-            "\u001b[1m 1/10\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m0s\u001b[0m 42ms/step"
+            "Average MSE: 607.226765913498\n",
+            "Standart MSE: 87.33467666328406\n",
+            "List of 5 Mean Squared Errors: \n",
+            "[621.306258490632, 643.6859045590729, 445.1289638638859, 708.3429045168798, 617.6697981370187]\n"
           ]
         }
       ],
@@ -235,7 +170,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "# Repeats count\n",
-        "n_repeats = 50\n",
+        "n_repeats = 5\n",
         "\n",
         "# mean squared errors list, will be 50\n",
         "mse_scores = []\n",
